applications-and-source-code/part-order-app-java/k8s-with-gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: part-order-app-gateway
  labels:
    env: dev
